<resources>
    <string name="app_name">Tienda</string>
    <string name="description_img_photo">imagen de la tienda</string>
    <string name="description_store_add">agregar una tienda</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="helper_required">Requerido</string>
    <string name="hint_name">Tienda</string>
    <string name="hint_phone">Telefono</string>
    <string name="hint_website">Url del sitio web</string>
    <string name="hint_photo">Url de la imagen</string>
    <string name="edit_store_title_add">Crear tienda</string>
    <string name="menu_save">guardar</string>
    <string name="edit_store_massage_save_success">tienda agregada correctamente</string>
    <string name="arg_id"> key_id</string>
    <string name="edit_store_message_save_success">Tienda agregada con exito</string>
    <string name="edit_store_message_update_success">Tienda actualizada con exito</string>
    <string name="edit_store_message_valid">Revise los campos requeridos</string>
    <string name="edit_store_title_edit">Editar tienda</string>
    <string name="dialog_delete_title">¿Eliminar la tienda?</string>
    <string name="dialog_delete_confirm">Confirmar</string>
    <string name="dialog_delete_cancel">Cancelar</string>
    <string name="dialog_option_title">¿Qué desea hacer?</string>
    <string name="main_error_no_website">esta tiendo no cuenta con sitio web</string>
    <string name="main_error_no_resolve">no se encontro app compatible</string>
    <string name="option_delete">Eliminar</string>
    <string name="option_call">Llamar</string>
    <string name="option_website">Ir al Sitio Web</string>
</resources>