<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".EditStoreFragment">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:padding="@dimen/common_padding_default">

       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/tilName"
           style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/hint_name"
           app:counterEnabled="true"
           app:counterMaxLength="@integer/counter_max_name"
           app:endIconMode="clear_text"
           app:startIconDrawable="@drawable/ic_store"
           app:helperText="@string/helper_required">

           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/etName"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="textCapWords"
               android:maxLength="@integer/counter_max_name" />

       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/tilPhone"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="@dimen/common_padding_default"
           android:hint="@string/hint_phone"
           app:helperText="@string/helper_required"
           app:endIconMode="clear_text"
           app:startIconDrawable="@drawable/ic_phone"
           style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/etPhone"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:maxLength="@integer/counter_max_phone"
               android:inputType="phone"
               />

       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/tilWebsite"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="@dimen/common_padding_default"
           android:hint="@string/hint_website"
           app:helperText="@string/helper_required"
           app:endIconMode="clear_text"
           app:startIconDrawable="@drawable/ic_link"
           style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/etWebsite"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textAppearance="?attr/textAppearanceCaption"
               android:textColor="@color/purple_700"
               android:maxLines="@integer/lines_url_website"
               android:inputType="textMultiLine"
               />
       </com.google.android.material.textfield.TextInputLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_marginTop="@dimen/common_padding_default"
           android:gravity="center_vertical">
           <com.google.android.material.textfield.TextInputLayout
               android:id="@+id/tilPhotoUrl"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:hint="@string/hint_photo"
               app:endIconMode="clear_text"
               app:startIconDrawable="@drawable/ic_link"
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/etPhotoUrl"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textAppearance="?attr/textAppearanceCaption"
                   android:textColor="@color/purple_700"
                   android:minLines="@integer/lines_url_photo"
                   android:maxLines="@integer/lines_url_photo"
                   android:inputType="textMultiLine"/>
           </com.google.android.material.textfield.TextInputLayout>

           <ImageView
               android:id="@+id/imgPhoto"
               android:layout_width="@dimen/photo_size_thumb"
               android:layout_height="@dimen/photo_size_thumb"
               android:src="@drawable/ic_photo"
               android:layout_marginStart="@dimen/common_padding_default"
               android:contentDescription="@string/description_img_photo" />
       </LinearLayout>
   </LinearLayout>
</androidx.core.widget.NestedScrollView>